# OS_lab

./: .gitignore  CMakeLists.txt  ChatHistory.txt  Makefile  PiCount.cpp  client  client.cpp  first_prod.c  lab2_main_works.c  main.c  main.cpp  merge_sort  new.c  server  server.cpp  test.cpp  test.txt
include/: Derivative.h
os/: Makefile  child  child.cpp  main  main.cpp  test  test.cpp
src/: Derivative.cpp  child.c  child1.c  child2.c  parent.c
src_old/: child.c  parent.c
